--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -103,14 +103,14 @@
       <wux-white-space size="small" />
       <view class="space-item-title">
         <text>价格</text>
-        <switch checked="{{showPrice}}" bindchange="switchChange" />
+        <!-- <switch checked="{{showPrice}}" bindchange="switchChange" /> -->
       </view>
-      <wux-white-space size="small" />
+      <wux-white-space />
       <view>
         <van-button class="space-check-item" type="{{goodPriceType === 1 ? 'primary' : 'default'}}" size="small" bindtap="switchType" data-value="{{1}}" data-key="goodPriceType">零售({{
           goodUnitType === 1 ? good.sellSingle : good.sellAll
         }})</van-button>
-        <van-button wx:if="{{showPrice}}" type="{{goodPriceType === 2 ? 'primary' : 'default'}}" class="space-check-item" size="small" bindtap="switchType" data-value="{{2}}" data-key="goodPriceType">批发({{
+        <van-button type="{{goodPriceType === 2 ? 'primary' : 'default'}}" class="space-check-item" size="small" bindtap="switchType" data-value="{{2}}" data-key="goodPriceType">批发({{
           goodUnitType === 1 ? good.midSingle : good.midAll
         }})</van-button>
         <van-button type="{{goodPriceType === 3 ? 'primary' : 'default'}}" size="small" bindtap="switchType" data-value="{{3}}" data-key="goodPriceType">自定义{{
@@ -234,12 +234,12 @@
     <view class="shop-title">
       <text>已选商品</text>
       <view class="shop-delete" bindtap="clearShop">
-        <van-icon custom-class="icon-delete" name="delete" color="#999" size="20px" catchtap="delete" />
+        <van-icon custom-class="icon-delete" name="delete" color="#999" size="20px" />
         <text>清空</text>
       </view>
     </view>
     <view class="good-box-shop">
-      <van-swipe-cell right-width="{{ 65 }}" wx:for="{{shopList}}" wx:key="index">
+      <view wx:for="{{shopList}}" wx:key="index">
         <view class="good-item">
           <image src="{{item.coverImg}}" mode="aspectFill" bindtap="viewImg" data-item="{{item.coverImg}}" />
           <view class="good-info">
@@ -262,8 +262,7 @@
             </view>
           </view>
         </view>
-        <view slot="right" class="remove" bindtap="remove" data-item="{{item}}" data-index="{{index}}">删除</view>
-      </van-swipe-cell>
+      </view>
     </view>
   </view>
 </van-popup>
