--- a/pages/search/index.wxml
+++ b/pages/search/index.wxml
@@ -7,63 +7,65 @@
     bind:callback="search"
     bind:switchEdit="switchEdit"
   />
-  <wux-white-space />
-  <!-- 搜索历史 -->
-  <view class="history" wx:if="{{ keyword.length > 0 }}">
-    <view class="title">
-      <text>搜索历史</text>
-      <block wx:if="{{ !isDelete }}">
-        <van-icon name="delete" color="#999" size="20px" catchtap="delete" />
-      </block>
-      <view wx:else class="remove-box">
-        <text catchtap="removeAll">全部清空</text>
-        <text>|</text>
-        <text>完成</text>
-      </view>
-    </view>
-    <view class="btn-group">
-      <view class="btn-gray" wx:for="{{ keyword }}" wx:key="index" wx:if="{{index < num}}" catchtap="btnSearch" data-value="{{ item }}">
-        <view class="btn-txt">
-          <text>{{item}}</text>
-          <block wx:if="{{ isDelete }}">
-            <text class="split-line">|</text>
-            <view class="close" catchtap="remove" data-index="{{ index }}">
-              <van-icon name="cross" custom-class="close-icon" />
-            </view>
-          </block>
+  <view class="search-box">
+    <wux-white-space />
+    <!-- 搜索历史 -->
+    <view class="history" wx:if="{{ keyword.length > 0 }}">
+      <view class="title">
+        <text>搜索历史</text>
+        <block wx:if="{{ !isDelete }}">
+          <van-icon name="delete" color="#999" size="20px" catchtap="delete" />
+        </block>
+        <view wx:else class="remove-box">
+          <text catchtap="removeAll">全部清空</text>
+          <text>|</text>
+          <text>完成</text>
         </view>
       </view>
-      <view class="arrow" wx:if="{{ num === min && keyword.length > min }}">
-        <van-icon size="16px" name="arrow-down" custom-class="arrow-icon" catchtap="setNum" data-num="{{ max }}" />
-      </view>
-      <view class="arrow" wx:if="{{ num === max }}">
-        <van-icon name="arrow-up" size="16px" color="#666" custom-class="arrow-icon" catchtap="setNum" data-num="{{ min }}" />
-      </view>
-    </view>
-  </view>
-
-  <!-- 搜索结果为空 -->
-  <empty-show
-    visible="{{ goodList.length === 0 && value && !loading }}"
-    icon="{{ msg.icon }}"
-    title="{{ msg.title }}"
-    my-class="empty-show"
-    rootClass="{{true}}"
-  />
-
-  <view class="container">
-    <view class="good-box" wx:for="{{ goodList }}" wx:key="index" data-id="{{item.id}}">
-      <image class="cu-avatar" src="{{item.coverImg}}" mode="aspectFill" bindtap="viewImg" data-item="{{item.coverImg}}" />
-      <view class="good-content" bindtap="linkDetail"  data-id="{{item.id}}">
-        <view class="good-name">{{item.name}}</view>
-        <!-- <view class="good-desc">{{item.desc}}</view> -->
-        <view wx:if="{{item.num != '1'}}" class="good-num">1{{item.unitDouble.name}}有{{item.num}}{{item.unitOne.name}}</view>
-        <view class="good-num">总销售 {{item.saleNum}} 次</view>
-        <view class="good-price">
-          <text>￥</text>{{item.sellSingle}}
+      <view class="btn-group">
+        <view class="btn-gray" wx:for="{{ keyword }}" wx:key="index" wx:if="{{index < num}}" catchtap="btnSearch" data-value="{{ item }}">
+          <view class="btn-txt">
+            <text>{{item}}</text>
+            <block wx:if="{{ isDelete }}">
+              <text class="split-line">|</text>
+              <view class="close" catchtap="remove" data-index="{{ index }}">
+                <van-icon name="cross" custom-class="close-icon" />
+              </view>
+            </block>
+          </view>
+        </view>
+        <view class="arrow" wx:if="{{ num === min && keyword.length > min }}">
+          <van-icon size="16px" name="arrow-down" custom-class="arrow-icon" catchtap="setNum" data-num="{{ max }}" />
+        </view>
+        <view class="arrow" wx:if="{{ num === max }}">
+          <van-icon name="arrow-up" size="16px" color="#666" custom-class="arrow-icon" catchtap="setNum" data-num="{{ min }}" />
         </view>
       </view>
-      <view class="good-btn" bindtap="showSpace" data-item="{{item}}">选规格</view>
+    </view>
+
+    <!-- 搜索结果为空 -->
+    <empty-show
+      visible="{{ goodList.length === 0 && value && !loading }}"
+      icon="{{ msg.icon }}"
+      title="{{ msg.title }}"
+      my-class="empty-show"
+      rootClass="{{true}}"
+    />
+
+    <view class="container">
+      <view class="good-box" wx:for="{{ goodList }}" wx:key="index" data-id="{{item.id}}">
+        <image class="cu-avatar" src="{{item.coverImg}}" mode="aspectFill" bindtap="viewImg" data-item="{{item.coverImg}}" />
+        <view class="good-content" bindtap="linkDetail"  data-id="{{item.id}}">
+          <view class="good-name">{{item.name}}</view>
+          <!-- <view class="good-desc">{{item.desc}}</view> -->
+          <view wx:if="{{item.num != '1'}}" class="good-num">1{{item.unitDouble.name}}有{{item.num}}{{item.unitOne.name}}</view>
+          <view class="good-num">总销售 {{item.saleNum}} 次</view>
+          <view class="good-price">
+            <text class="icon-price">￥</text>{{item.sellSingle}}<text wx:if="{{item.sellSingle != item.sellAll}}"> /<text class="icon-price">￥</text>{{item.sellAll}}</text>
+          </view>
+        </view>
+        <view class="good-btn" bindtap="showSpace" data-item="{{item}}">选规格</view>
+      </view>
     </view>
   </view>
 </view>
