--- a/pages/ship/index.wxml
+++ b/pages/ship/index.wxml
@@ -21,7 +21,7 @@
         data-id="{{item.id}}"
         disabled="{{item.disabled}}"
       />
-      <image src="{{item.coverImg}}" mode="aspectFill" />
+      <image src="{{item.coverImg}}" mode="aspectFill" bindtap="viewImg" data-item="{{item.coverImg}}" />
       <view class="good-info">
         <view class="good-name">{{item.name}}</view>
         <view class="good-tip"><text>已选规格：</text>{{item.num}}{{item.unitType === 1 ? item.unitSingle : item.unitAll}}、单价：{{item.sale}}</view>
@@ -48,7 +48,7 @@
         data-id="{{item.id}}"
         disabled="{{item.disabled}}"
       />
-      <image src="{{item.coverImg}}" mode="aspectFill" />
+      <image src="{{item.coverImg}}" mode="aspectFill" bindtap="viewImg" data-item="{{item.coverImg}}" />
       <view class="good-info">
         <view class="good-name">{{item.name}}</view>
         <view class="good-tip"><text>已选规格：</text>{{item.num}}{{item.unitType === 1 ? item.unitSingle : item.unitAll}}、单价：{{item.sale}}</view>
